# otus_cpp_01

./: .gitignore  .travis.yml  CMakeLists.txt  gtest_version.cpp  lib.cpp  main.cpp  test_version.cpp
